--- a/GDS_MainProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GDS_MainProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -172,8 +172,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=640.000 Y=334.400
-WindowSize=X=1281.600 Y=721.600
+ScreenPosition=X=640.000 Y=334.000
+WindowSize=X=1282.000 Y=722.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1084,8 +1084,20 @@ WidgetCarousel.TimeStamp=2023.03.02-10.07.48
 WidgetCarousel.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2023.03.02-10.07.29
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+EnvironmentLightingViewer.TimeStamp=2023.02.27-06.39.17
+EnvironmentLightingViewer.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2023.02.27-06.39.17
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=M:/Epic Games/epic launcher/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=I:/Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[DetailPropertyExpansion]
+WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+WorldPartitionRuntimeSpatialHash="\"Object\" "
+WorldPartitionRuntimeHash="\"Object\" "
+Object="\"Object\" "
 
